--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2010//
+-マニュアル探査艦で Konawiki の DB を Sqlite3 対応 (r238)(@531)
+
 2010/05/24 version 1.5329
 -命令のふりがなを修正(28)(r233)(@500)
 -「日付選択」命令で初期値を設定できない不具合とWindows7カレンダーが欠ける問題を修正(r234)(@510)。
