2010/08/11 version 1.533 -「UNIXTIME変換」「UNIXTIME_日時変換」命令を追加(r237) -マニュアル探査艦で Konawiki の DB を Sqlite3 対応 (r238)(@531) -「ブラウザ」部品で、Lunaスタイルに対応(@535)(r240) -vnakoに「エラーダイアログ表示許可」変数を導入(@530)(r240)

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,10 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2010//
+2010/08/11 version 1.533
+-「UNIXTIME変換」「UNIXTIME_日時変換」命令を追加(r237)
 -マニュアル探査艦で Konawiki の DB を Sqlite3 対応 (r238)(@531)
+-「ブラウザ」部品で、Lunaスタイルに対応(@535)(r240)
+-vnakoに「エラーダイアログ表示許可」変数を導入(@530)(r240)
 
 2010/05/24 version 1.5329
 -命令のふりがなを修正(28)(r233)(@500)
