-「エクセル保存」「ワード保存」「パワポPDF出力」でPDFに対応(@533)(r242)

--- a/History.txt
+++ b/History.txt
@@ -3,8 +3,11 @@
 2010/08/11 version 1.533
 -「UNIXTIME変換」「UNIXTIME_日時変換」命令を追加(r237)
 -マニュアル探査艦で Konawiki の DB を Sqlite3 対応 (r238)(@531)
+-JSONデコードで大きな整数が扱えない問題を修正(r239)(@532)
 -「ブラウザ」部品で、Lunaスタイルに対応(@535)(r240)
 -vnakoに「エラーダイアログ表示許可」変数を導入(@530)(r240)
+-「メール分割受信」で引数の順番が仕様と違っていたので修正(@211)(r241)
+-「エクセル保存」「ワード保存」「パワポPDF出力」でPDFに対応(@533)(r242)
 
 2010/05/24 version 1.5329
 -命令のふりがなを修正(28)(r233)(@500)
