- 「エラーダイアログ表示許可」変数が有効にならない不具合を修正(@530)(r246)

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,10 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2010/09/06 version 1.5331
+- ライブラリに「nakotter」を追加(@541)(r244)。
+- マニュアル探査艦で Konawiki の DB を Sqlite3 対応。(r245)(@531)
+- 「エラーダイアログ表示許可」変数が有効にならない不具合を修正(@530)(r246)
+
 2010/08/11 version 1.533
 -「UNIXTIME変換」「UNIXTIME_日時変換」命令を追加(r237)
 -マニュアル探査艦で Konawiki の DB を Sqlite3 対応 (r238)(@531)
