--- a/History.txt
+++ b/History.txt
@@ -4,6 +4,7 @@
 - ライブラリに「nakotter」を追加(@541)(r244)。
 - マニュアル探査艦で Konawiki の DB を Sqlite3 対応。(r245)(@531)
 - 「エラーダイアログ表示許可」変数が有効にならない不具合を修正(@530)(r246)
+- 「ディスク空きサイズ」でAドライブにディスクが入ってないとエラーが出る問題を修正(@545)(r247)
 
 2010/08/11 version 1.533
 -「UNIXTIME変換」「UNIXTIME_日時変換」命令を追加(r237)
