- 「nakotter」に API を大幅に追加。(@541)(r248) - 「マニュアル探査艦」の掲示板検索を新 URL に対応。(@555)(r248)

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+- 「nakotter」に API を大幅に追加。(@541)(r248)
+- 「マニュアル探査艦」の掲示板検索を新 URL に対応。(@555)(r248)
+
 2010/09/06 version 1.5331
 - ライブラリに「nakotter」を追加(@541)(r244)。
 - マニュアル探査艦で Konawiki の DB を Sqlite3 対応。(r245)(@531)
