バージョンアップ1.5332のための処理

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2011/02/28 version 1.5332
+- マニュアルDBの定期更新。
+- ウィルス対策ソフトの誤検出問題対策(@506)(r249)
 - 「nakotter」に API を大幅に追加。(@541)(r248)
 - 「マニュアル探査艦」の掲示板検索を新 URL に対応。(@555)(r248)
 
