送信したメールに「Return-Path」が設定されていない不具合を修正(@619)

--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2012/04/06 version 1.5333
+2012/04/08 version 1.5334
 - 今更DelphiのコンパイラバージョンをDelphi2009にバージョンアップ
--- (これに伴い一部の機能が無効になってしまいました。)
-- JSONエンコード/JSONデコードの問題を修正(@532)
+-- (これに伴い一部の機能が無効になってしまいました。)(r253)(r254)
+- JSONエンコード/JSONデコードの問題を修正(@532)(r254)
 
 2011/02/28 version 1.5332
 - マニュアルDBの定期更新。
