- 最大限の互換性維持のため対象コンパイラをDelphi7に戻した。

--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,10 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2012/04/08 version 1.5334
-- 今更DelphiのコンパイラバージョンをDelphi2009にバージョンアップ
--- (これに伴い一部の機能が無効になってしまいました。)(r253)(r254)
+2012/04/08 version 1.5333
+- マニュアルDBの定期更新。
 - JSONエンコード/JSONデコードの問題を修正(@532)(r254)
+- メール送信系の命令でメールに「Return-Path」が設定されていない問題を修正(@619)(r255)
+- 最大限の互換性維持のため対象コンパイラをDelphi7に戻した。
 
 2011/02/28 version 1.5332
 - マニュアルDBの定期更新。
