(@625) Tエディタにテキストが設定できない問題など。

--- a/History.txt
+++ b/History.txt
@@ -4,7 +4,8 @@
 - マニュアルDBの定期更新。
 - JSONエンコード/JSONデコードの問題を修正(@532)(r254)
 - メール送信系の命令でメールに「Return-Path」が設定されていない問題を修正(@619)(r255)
-- 最大限の互換性維持のため対象コンパイラをDelphi7に戻した。
+- 最大限の互換性維持のため対象コンパイラをDelphi7に戻した。(r256)
+--「マウス入った時」「マウス離した時」が動作しなくなる点が課題。
 
 2011/02/28 version 1.5332
 - マニュアルDBの定期更新。
