(@623)梱包したテキストファイルが読めない問題

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2012/04/22 version 1.5334
+-1.5333でTエディタが動かなくなったバグを修正(@625)(r257)。
+-
+
 2012/04/08 version 1.5333
 - マニュアルDBの定期更新。
 - JSONエンコード/JSONデコードの問題を修正(@532)(r254)
