UIWebBrowserの禁止項目の問題を修正(@622) うぇいくさんに感謝。

--- a/History.txt
+++ b/History.txt
@@ -1,8 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
 2012/04/22 version 1.5334
--1.5333でTエディタが動かなくなったバグを修正(@625)(r257)。
--
+- 1.5333でTエディタが動かなくなったバグを修正(@625)(r257)
+- 梱包したテキストファイルが読めない問題を修正(@623)(r258)
+- ブラウザ部品の禁止項目が動かない問題を修正(@622)
 
 2012/04/08 version 1.5333
 - マニュアルDBの定期更新。
