--- a/History.txt
+++ b/History.txt
@@ -3,7 +3,8 @@
 2012/04/22 version 1.5334
 - 1.5333でTエディタが動かなくなったバグを修正(@625)(r257)
 - 梱包したテキストファイルが読めない問題を修正(@623)(r258)
-- ブラウザ部品の禁止項目が動かない問題を修正(@622)
+- ブラウザ部品の禁止項目が動かない問題を修正(@622)(r259)
+- ワイルドカード系の命令でマッチが間違う問題を修正(@613)(r)
 
 2012/04/08 version 1.5333
 - マニュアルDBの定期更新。
