- ダイアログの表示位置をフォーム中央になるように修正(@621)(r261)

--- a/History.txt
+++ b/History.txt
@@ -4,7 +4,8 @@
 - 1.5333でTエディタが動かなくなったバグを修正(@625)(r257)
 - 梱包したテキストファイルが読めない問題を修正(@623)(r258)
 - ブラウザ部品の禁止項目が動かない問題を修正(@622)(r259)
-- ワイルドカード系の命令でマッチが間違う問題を修正(@613)(r)
+- ワイルドカード系の命令でマッチが間違う問題を修正(@613)(r260)
+- ダイアログの表示位置をフォーム中央になるように修正
 
 2012/04/08 version 1.5333
 - マニュアルDBの定期更新。
