--- a/History.txt
+++ b/History.txt
@@ -1,11 +1,13 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
 2012/04/22 version 1.5334
-- 1.5333でTエディタが動かなくなったバグを修正(@625)(r257)
+- 1.5333でTエディタが動かなくなった問題を修正(@625)(r257)
 - 梱包したテキストファイルが読めない問題を修正(@623)(r258)
 - ブラウザ部品の禁止項目が動かない問題を修正(@622)(r259)
-- ワイルドカード系の命令でマッチが間違う問題を修正(@613)(r260)
-- ダイアログの表示位置をフォーム中央になるように修正
+- ワイルドカード系の命令で日本語の問題を修正(@613)(r260)
+- ダイアログ表示位置がフォーム中央になるように修正(@621)(r261)
+- 「マウス入った時」「マウス離した時」が動作しない問題を修正。(@258)(r262)
+- JSONエンコードの際にエスケープされていない問題を修正。(@627)(r263)
 
 2012/04/08 version 1.5333
 - マニュアルDBの定期更新。
