--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2012/07/04 version 1.5335
+- インストール場所によっては、Report.txtが保存できないことがある問題を修正。
+
 2012/04/22 version 1.5334
 - 1.5333でTエディタが動かなくなった問題を修正(@625)(r257)
 - 梱包したテキストファイルが読めない問題を修正(@623)(r258)
