--- a/History.txt
+++ b/History.txt
@@ -7,6 +7,7 @@
 - Tエディタのカラーリング設定でCPPやJAVAなどが指定できない問題を修正(@636)(r267)
 - 配布ファイルに新しい「nakostr.dll」が梱包されてなかったのでパッケージを修正。
 -「エクセル最右列取得」命令を追加(@617)(r268)
+-「OS」変数をWindows8に対応させた。(r269)
 
 2012/04/22 version 1.5334
 - 1.5333でTエディタが動かなくなった問題を修正(@625)(r257)
