--- a/History.txt
+++ b/History.txt
@@ -1,13 +1,17 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2012/07/04 version 1.5335
-- インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)。
+2012/08/05 version 1.5336
+- なでしこエディタのマクロ機能を強化
+
+2012/07/14 version 1.53352
+- インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)(r270)。
 -「CPU使用率取得」命令がWindows7 64bitでうまく動かない問題を修正(@459)(r265)
 - Ｔエディタの表示記号が機能していない問題を修正(@629)(r266)
 - Tエディタのカラーリング設定でCPPやJAVAなどが指定できない問題を修正(@636)(r267)
 - 配布ファイルに新しい「nakostr.dll」が梱包されてなかったのでパッケージを修正。
 -「エクセル最右列取得」命令を追加(@617)(r268)
 -「OS」変数をWindows8に対応させた。(r269)
+- (リリースミス)なでしこエディタの最新版がリリース版に反映されない問題を修正。
 
 2012/04/22 version 1.5334
 - 1.5333でTエディタが動かなくなった問題を修正(@625)(r257)
