--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
 2012/08/05 version 1.5336
-- なでしこエディタのマクロ機能を強化
+- なでしこエディタのマクロ機能を強化(r271)(r273)
 
 2012/07/14 version 1.53352
 - インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)(r270)。
