- FTPのPASVモードがデフォルトでオフになっていたので修正。(@651)(r276)

--- a/History.txt
+++ b/History.txt
@@ -3,6 +3,9 @@
 2012/11/27 version 1.5336
 - なでしこエディタのマクロ機能を強化(r271)(r273)
 - vnakoのTIFFなど読み込みエラー時にSusieプラグインがあればそれを利用して読込を行うよう修正(r274)
+- ダイアログフォームの表示位置を改めて再点検。(@654)(r275)
+- 七並べサンプルの修正(@658)
+- FTPのPASVモードがデフォルトでオフになっていたので修正。(@651)(r276)
 
 2012/07/14 version 1.53352
 - インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)(r270)。
