- Tエディタの設定パネルが表示されるよう修正(@647)(r277)

--- a/History.txt
+++ b/History.txt
@@ -6,6 +6,7 @@
 - ダイアログフォームの表示位置を改めて再点検。(@654)(r275)
 - 七並べサンプルの修正(@658)
 - FTPのPASVモードがデフォルトでオフになっていたので修正。(@651)(r276)
+- Tエディタの設定パネルが表示されるよう修正(@647)(r277)
 
 2012/07/14 version 1.53352
 - インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)(r270)。
