- 全角文字列を数え間違えるというエンバグを修正(r279)。

--- a/History.txt
+++ b/History.txt
@@ -1,12 +1,16 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2012/11/27 version 1.5336
+2013/04/03 version 1.53354
+- なでしこの利用していたライブラリIndy10の関係でGmail送受信に失敗する問題を修正。
+- 全角文字列を数え間違えるというエンバグを修正(r279)。
+
+2012/11/27 version 1.53353
 - なでしこエディタのマクロ機能を強化(r271)(r273)
 - vnakoのTIFFなど読み込みエラー時にSusieプラグインがあればそれを利用して読込を行うよう修正(r274)
 - ダイアログフォームの表示位置を改めて再点検。(@654)(r275)
 - 七並べサンプルの修正(@658)
 - FTPのPASVモードがデフォルトでオフになっていたので修正。(@651)(r276)
-- Tエディタの設定パネルが表示されるよう修正(@647)(r277)
+- Tエディタの設定パネルが表示されるよう修正(@647)(r277)(r278)
 
 2012/07/14 version 1.53352
 - インストール場所によっては、report.txtが保存できないことがある問題を修正(@635)(r264)(r270)。
