- メール受信時削除が正しく働かない問題を修正(@676)(r283)。 - r282のための自動テストを追加

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,12 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2013/04/12 version 1.53355
+- TCPサーバとUDPにて$00(nul)と"』"を受信する出来ない問題へ対応(@645)
+- PNG保存しても、正しくPNGの形式で保存されない問題へ対応(r283)。
+- メール受信時削除が正しく働かない問題を修正(@676)(r283)。
+
 2013/04/03 version 1.53354
-- なでしこの利用していたライブラリIndy10の関係でGmail送受信に失敗する問題を修正。
+- なでしこの利用していたライブラリIndy10の関係でネット関連の命令が失敗する不具合を修正。 
 - 全角文字列を数え間違えるというエンバグを修正(r279)。
 
 2012/11/27 version 1.53353
