-「メール受信」で添付ファイルの保存に失敗する問題を修正(@667)(r284)

--- a/History.txt
+++ b/History.txt
@@ -2,8 +2,9 @@
 
 2013/04/12 version 1.53355
 - TCPサーバとUDPにて$00(nul)と"』"を受信する出来ない問題へ対応(@645)
-- PNG保存しても、正しくPNGの形式で保存されない問題へ対応(r283)。
-- メール受信時削除が正しく働かない問題を修正(@676)(r283)。
+- PNG保存しても、正しくPNGの形式で保存されない問題へ対応(r282)。
+-「メール受信時削除」が正しく働かない問題を修正(@676)(r283)。
+-「メール受信」で添付ファイルの保存に失敗する問題を修正(@667)(r284)
 
 2013/04/03 version 1.53354
 - なでしこの利用していたライブラリIndy10の関係でネット関連の命令が失敗する不具合を修正。 
