-Delphi7にFastMMを追加してメモリ管理を効率化した

--- a/History.txt
+++ b/History.txt
@@ -1,10 +1,10 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2013/05/09 version 1.534
--コンパイラをDelphi7から2005に変更した。
+2013/05/10 version 1.535
 -Tエディタのファイルドロップにてファイル名が取得できない件に対応(@683)(r285)
 -Vista/7/8にて、ComboBoxのリスト行数が効かないOSバグに対応(@682)(r286)
 -UDPソケットに自ホストと自ポートを指定する機能を追加(r285)。
+-Delphi7にFastMMを追加してメモリ管理を効率化した(r287)。
 
 2013/04/12 version 1.53355
 - TCPサーバとUDPにて$00(nul)と"』"を受信する出来ない問題へ対応(@645)
