タスクトレイでVista以降のバルーンに対応(r293)(@671)

--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,11 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2013/05/10 version 1.535
+2013/06/03 version 1.537
+- Vista以降のバルーンに対応(r293)(@671)
+- メール受信でメール添付メールがエラーとなるのに対応(@686)(r291)
+- nakonetのプログレスダイアログの休止を調整(r292)
+
+2013/05/10 version 1.536
 -Tエディタのファイルドロップにてファイル名が取得できない件に対応(@683)(r285)
 -Vista/7/8にて、ComboBoxのリスト行数が効かないOSバグに対応(@682)(r286)
 -UDPソケットに自ホストと自ポートを指定する機能を追加(r285)。
