--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,13 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2013/06/26 version 1.538
+- 「HTTPゲット」「HTTPポスト」にてHTTPS対応およびchunk形式の受信に対応(r294)
+- FTPでFTPSへ対応(r295)
+- 多角形にて頂点の数が128を超えた場合の問題を修正(r296)
+- プロ版の「カスタマーバーコード文字列取得」「バーコード画像描画」の不具合を修正(r297)
+
 2013/06/03 version 1.537
-- Vista以降のバルーンに対応(r293)(@671)
+- Vista以降のタスクトレイのバルーン表示に対応(r293)(@671)
 - メール受信でメール添付メールがエラーとなるのに対応(@686)(r291)
 - nakonetのプログレスダイアログの休止を調整(r292)
 
