-「エクセル画像挿入」「エクセル選択シェイプサイズ設定」命令を追加(r298)

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2013/06/26 version 1.539
+-「エクセル画像挿入」「エクセル選択シェイプサイズ設定」命令を追加(r298)
+
 2013/06/26 version 1.538
 - 「HTTPゲット」「HTTPポスト」にてHTTPS対応およびchunk形式の受信に対応(r294)
 - FTPでFTPSへ対応(r295)
