vnakoのデバッグ画面でTEditorがメモになっていた部分を修正。一部、IDが重なっていた命令を修正。

--- a/History.txt
+++ b/History.txt
@@ -1,13 +1,12 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
 2013/06/26 version 1.539
--「エクセル画像挿入」「エクセル選択シェイプサイズ設定」「エクセル選択シェイプ移動」命令を追加(r298)(r300)
-
-2013/06/26 version 1.538
+-「エクセル画像挿入」「エクセル選択シェイプサイズ設定」「エクセル選択シェイプ移動」命令を追加(r298)(r300)(r301)
 - 「HTTPゲット」「HTTPポスト」にてHTTPS対応およびchunk形式の受信に対応(r294)
 - FTPでFTPSへ対応(r295)
 - 多角形にて頂点の数が128を超えた場合の問題を修正(r296)
 - プロ版の「カスタマーバーコード文字列取得」「バーコード画像描画」の不具合を修正(r297)
+- vnakoのデバッグ画面が普通のメモエディタになっていたのでTEditorに修正(r302)
 
 2013/06/03 version 1.537
 - Vista以降のタスクトレイのバルーン表示に対応(r293)(@671)
