Uメモのサンプルを追加。「OS」でWindows8.1を判定できるように修正。

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,14 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2014/01/04 version 1.540
+-r253で削除したTntComponentを再び利用可能にした(r310)
+-メモ部品にて行に値を代入した際の動作がおかしい点を修正(@709)(r309)
+-Unicode部品にUTF8で文字列を設定しようとすると文字が化ける問題に対応(@711)(r308)-HTTPプット、HTTPデリートの命令を追加(r307)
+-タスクトレイのバルーンのオプションに「タイトル無し」を追加(r306)
+-タスクトレイのバルーンにアプリケーションアイコンを指定した際の問題に対応(@703)(r305)
+-アスペクト比を保ったまま画像をリサイズする際、特定の条件下で画像が欠けてしまう問題を修正。(r304)
+-ファイル開くと保存ファイル開くを98/NTに自動対応するよう修正(@698)(r303)
+
 2013/06/26 version 1.539
 -「エクセル画像挿入」「エクセル選択シェイプサイズ設定」「エクセル選択シェイプ移動」命令を追加(r298)(r300)(r301)
 - 「HTTPゲット」「HTTPポスト」にてHTTPS対応およびchunk形式の受信に対応(r294)
