-セキュリティに配慮して読み込んだソースがメモリに残りにくく配慮(r313)

--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,10 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2014/01/** version 1.541
+-セキュリティに配慮して読み込んだソースがメモリに残りにくく配慮(r313)
+
 2014/01/04 version 1.540
+-「OS」変数で「Windows8.1」が識別できるように修正(r311)
 -r253で削除したTntComponentを再び利用可能にした(r310)
 -メモ部品にて行に値を代入した際の動作がおかしい点を修正(@709)(r309)
 -Unicode部品にUTF8で文字列を設定しようとすると文字が化ける問題に対応(@711)(r308)-HTTPプット、HTTPデリートの命令を追加(r307)
