-TエディタでCPP/Java/Perlでカラーリングが利かない問題を修正(r315)(@636)

--- a/History.txt
+++ b/History.txt
@@ -3,6 +3,7 @@
 2014/01/** version 1.541
 -セキュリティに配慮して読み込んだソースがメモリに残りにくく配慮(r313)
 -画面が激しくちらつく問題を解消(r314)
+-TエディタでCPP/Java/Perlでカラーリングが利かない問題を修正(r315)(@636)
 
 2014/01/04 version 1.540
 -「OS」変数で「Windows8.1」が識別できるように修正(r311)
