-(r313)のエンバグを修正(r314)(@714)(@715)

--- a/History.txt
+++ b/History.txt
@@ -1,8 +1,11 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2014/01/** version 1.541
+2014/02/10 version 1.542
+-(r313)のエンバグを修正(r314)(@714)(@715)
+
+2014/01/28 version 1.541
 -セキュリティに配慮して読み込んだソースがメモリに残りにくく配慮(r313)
--画面が激しくちらつく問題を解消(r314)
+-画面が激しくちらつく問題を解消(r314)(@688)
 -TエディタでCPP/Java/Perlでカラーリングが利かない問題を修正(r315)(@636)
 
 2014/01/04 version 1.540
