-「語句列挙」命令を追加(r316)(@707)

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
 2014/02/10 version 1.542
--(r313)のエンバグを修正(r314)(@714)(@715)
+-不具合修正(r313)のエンバグ(r314)(@714)(@715)
+-再度Tエディタのカラーリング問題を修正(r315)(@636)
+-「語句列挙」命令を追加(r316)(@707)
 
 2014/01/28 version 1.541
 -セキュリティに配慮して読み込んだソースがメモリに残りにくく配慮(r313)
