- ステータスバーのメモリリークを修正(r324)(@730) - OSバージョンで、Windows8/8.1を追加(r324) - ブラウザ部品のユニットバージョンを8に変更。(r324)

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,19 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2014/08/25 version 1.544
+- トラックボックスの線枠のズレを修正(r318)(@p717)
+- ハッシュの要素数が間違う問題を修正(r320)(@692)
+- ツリー部品を操作する命令を追加(r321)(@732)
+- 「エクセル新規ブック」と「エクセル開く」でワークブック名を返すように修正(r322)
+- 配列カスタムソートで要素が３以上あるときにソートされない問題を修正(r323)
+- ステータスバーのメモリリークを修正(r323)(@730)
+- OSバージョンで、Windows8/8.1を追加(r323)
+- ブラウザ部品のユニットバージョンを8に変更。(r323)
+
 2014/02/28 version 1.543
--ハッシュに対する「要素数」が正しくないのを修正(@692)(r318)
+-トラック部品のずれを修正(r318)
+-なこったーの修正(r319)
+-ハッシュに対する「要素数」が正しくないのを修正(@692)(r320)
 
 2014/02/10 version 1.542
 -不具合修正(r313)のエンバグ(r314)(@714)(@715)
