念のため、メール受信時のファイル名フィルタを確認.

--- a/History.txt
+++ b/History.txt
@@ -6,9 +6,10 @@
 - ツリー部品を操作する命令を追加(r321)(@732)
 - 「エクセル新規ブック」と「エクセル開く」でワークブック名を返すように修正(r322)
 - 配列カスタムソートで要素が３以上あるときにソートされない問題を修正(r323)
-- ステータスバーのメモリリークを修正(r323)(@730)
-- OSバージョンで、Windows8/8.1を追加(r323)
-- ブラウザ部品のユニットバージョンを8に変更。(r323)
+- ステータスバーのメモリリークを修正(r324)(@730)
+- OSバージョンで、Windows8/8.1を追加(r324)
+- ブラウザ部品のユニットバージョンを8に変更。(r324)
+- ALT対策がオフになっていたので有効に戻しました(r325)
 
 2014/02/28 version 1.543
 -トラック部品のずれを修正(r318)
