正規表現命令のメモリ違反

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,12 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2014/12/04 version 1.545
+- Vista系ダイアログ表示(二択、警告、情報)のアイコンの誤りを修正(@742,@743)(r327)
+- 全ファイル列挙時、途中経過の表示に関するオプションを追加(@739)(r328)
+- 
+
 2014/08/25 version 1.544
-- トラックボックスの線枠のズレを修正(r318)(@p717)
+- トラックボックスの線枠のズレを修正(r318)(@717)
 - ハッシュの要素数が間違う問題を修正(r320)(@692)
 - ツリー部品を操作する命令を追加(r321)(@732)
 - 「エクセル新規ブック」と「エクセル開く」でワークブック名を返すように修正(r322)
@@ -9,7 +14,7 @@
 - ステータスバーのメモリリークを修正(r324)(@730)
 - OSバージョンで、Windows8/8.1を追加(r324)
 - ブラウザ部品のユニットバージョンを8に変更。(r324)
-- ALT対策がオフになっていたので有効に戻しました(r325)
+- ALT対策がオフになっていたので修正(@729)(r325)
 
 2014/02/28 version 1.543
 -トラック部品のずれを修正(r318)
