正規表現関連周りの不具合修正。そしてテストを追加。

--- a/History.txt
+++ b/History.txt
@@ -3,7 +3,7 @@
 2014/12/04 version 1.545
 - Vista系ダイアログ表示(二択、警告、情報)のアイコンの誤りを修正(@742,@743)(r327)
 - 全ファイル列挙時、途中経過の表示に関するオプションを追加(@739)(r328)
-- 
+- 正規表現置換、正規表現マッチのメモリエラーを修正(@744)(r329)
 
 2014/08/25 version 1.544
 - トラックボックスの線枠のズレを修正(r318)(@717)
