--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2014/12/08 version 1.546
+- 正規表現周りの命令がうまく動いていなかったので修正(r330)(@744)
+- 1.545に正規表現の問題があったのでアップデート。
+
 2014/12/04 version 1.545
 - Vista系ダイアログ表示(二択、警告、情報)のアイコンの誤りを修正(@742,@743)(r327)
 - 全ファイル列挙時、途中経過の表示に関するオプションを追加(@739)(r328)
