なでしこエディタのアクションエディタをWEBブラウザに変更しニュースが表示されるようにした

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,17 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2015/01/12 version 1.548
+- 簡易POST、簡易GETにてhttpsへのアクセスが失敗する障害に対応(@690)(r335)
+
+
+2014/12/22 version 1.547
+- vnakoの言うに\rや\nのみの改行があるとメモリ違反となる障害に対応(@744)(r332)
+- 正規表現区切るで区切り文字が無い場合の結果を区切ると同じになるよう修正(@749)(r333)
+- 吹き出し表示が指定した座標にかかわらず母艦の中央に表示されてしまう現象に対応(r334)
+
 2014/12/08 version 1.546
 - 正規表現周りの命令がうまく動いていなかったので修正(r330)(@744)
+- 正規表現の一致が256の倍数個あった場合が失敗する問題を修正(r331)(@745)
 - 1.545に正規表現の問題があったのでアップデート。
 
 2014/12/04 version 1.545
