バージョン番号の修正

--- a/History.txt
+++ b/History.txt
@@ -1,8 +1,8 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2015/01/12 version 1.548
+2015/02/24 version 1.548
 - 簡易POST、簡易GETにてhttpsへのアクセスが失敗する障害に対応(@690)(r335)
-
+- なでしこエディタのアクションパネルをブラウザ部品に変更(r336)
 
 2014/12/22 version 1.547
 - vnakoの言うに\rや\nのみの改行があるとメモリ違反となる障害に対応(@744)(r332)
