- 「OS」変数で「Windows 10」が検出されるように修正(r338)

--- a/History.txt
+++ b/History.txt
@@ -3,6 +3,7 @@
 2015/02/24 version 1.548
 - 簡易POST、簡易GETにてhttpsへのアクセスが失敗する障害に対応(@690)(r335)
 - なでしこエディタのアクションパネルをブラウザ部品に変更(r336)
+- 「OS」変数で「Windows 10」が検出されるように修正(r338)
 
 2014/12/22 version 1.547
 - vnakoの言うに\rや\nのみの改行があるとメモリ違反となる障害に対応(@744)(r332)
