なでしこエディタのニュースにシンプルページが表示されるように修正wq

--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,12 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2015/02/24 version 1.548
+2015/02/24 version 1.549
+- JPEG/EXIFのEXIT2.3までのEXIFタグに対応。(r339)
+- JPEG/EXIFのGPS情報の取得に対応。(r339)
+- JPEG/EXIFのバイト順が'MM'の場合に値が正しく取得できない問題に対応。(r339)
+- DLLの問題でSQLite2関連の命令が動かなくなっていたのを修正。
+
+2015/02/14 version 1.548
 - 簡易POST、簡易GETにてhttpsへのアクセスが失敗する障害に対応(@690)(r335)
 - なでしこエディタのアクションパネルをブラウザ部品に変更(r336)
 - 「OS」変数で「Windows 10」が検出されるように修正(r338)
