なでしこエディタのニュース表示をオフにできるようにした

--- a/History.txt
+++ b/History.txt
@@ -5,6 +5,7 @@
 - JPEG/EXIFのGPS情報の取得に対応。(r339)
 - JPEG/EXIFのバイト順が'MM'の場合に値が正しく取得できない問題に対応。(r339)
 - DLLの問題でSQLite2関連の命令が動かなくなっていたのを修正。
+- なでしこエディタの最新情報表示を改良。
 
 2015/02/14 version 1.548
 - 簡易POST、簡易GETにてhttpsへのアクセスが失敗する障害に対応(@690)(r335)
