--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,9 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
+2015/02/26 version 1.550
+- なでしこエディタのニュース表示をオフにできるようにした(r341)
+- 「地図表示」「経路表示」命令を追加。(r342)
+
 2015/02/24 version 1.549
 - JPEG/EXIFのEXIT2.3までのEXIFタグに対応。(r339)
 - JPEG/EXIFのGPS情報の取得に対応。(r339)
