- 「HTTPダウンロード」命令で「HTTPオプション」のRefererに対応。(r343)

--- a/History.txt
+++ b/History.txt
@@ -3,6 +3,7 @@
 2015/02/26 version 1.550
 - なでしこエディタのニュース表示をオフにできるようにした(r341)
 - 「地図表示」「経路表示」命令を追加。(r342)
+- 「HTTPダウンロード」命令で「HTTPオプション」のRefererに対応。(r343)
 
 2015/02/24 version 1.549
 - JPEG/EXIFのEXIT2.3までのEXIFタグに対応。(r339)
