なでしこエディタのアクションパネルのブラウザにポップアップボタンを追加

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 【なでしこ更新履歴】※(r数値)がSVN管理番号、(@数値)がバグ掲示板のスレッド番号です。(#数値)は旧Tracの番号。
 
-2015/02/26 version 1.550
-- なでしこエディタのニュース表示をオフにできるようにした(r341)
+2015/03/09 version 1.550
+- なでしこエディタのニュース表示をオフにできるようにした(r341)(r344)
 - 「地図表示」「経路表示」命令を追加。(r342)
 - 「HTTPダウンロード」命令で「HTTPオプション」のRefererに対応。(r343)
 
